--- a/src/stylus/clock/header.styl
+++ b/src/stylus/clock/header.styl
@@ -1,6 +1,6 @@
 .header
-  elevation(1)
   background var(--header-background)
+  border-bottom 1px solid var(--border)
   color var(--text)
   grid-area header
   padding 0 env(safe-area-inset-right) 0 env(safe-area-inset-left)
