--- a/src/stylus/clock/header.styl
+++ b/src/stylus/clock/header.styl
@@ -6,6 +6,7 @@
   padding 0 env(safe-area-inset-right) 0 env(safe-area-inset-left)
   position sticky
   top 0
+  transform translate3d(0, var(--shift-y), 0) // Custom property is set via JS.
   transition background var(--transition), border var(--transition), color var(--transition)
 
 .header__frame
