grid and layout updates/fixes

--- a/src/stylus/clock/content.styl
+++ b/src/stylus/clock/content.styl
@@ -1,5 +1,5 @@
 .content
   align-self center
-  grid-area content
+  grid-row 2
   justify-self center
   padding 0 env(safe-area-inset-right) 0 env(safe-area-inset-left)
