--- a/src/stylus/clock/clocks.styl
+++ b/src/stylus/clock/clocks.styl
@@ -27,7 +27,7 @@ total = grid_count * grid_count
   background var(--face)
   border 1px solid var(--border)
   display grid
-  grid-area content
+  grid-row 2
   grid-template-columns 'repeat(%s, 1fr)' % ((grid_count + 1) * interval)
   grid-template-rows 'repeat(%s, 1fr)' % ((grid_count + 1) * interval)
   justify-self center
