--- a/src/stylus/clock/header.styl
+++ b/src/stylus/clock/header.styl
@@ -2,9 +2,10 @@
   background var(--header-background)
   border-bottom 1px solid var(--border)
   color var(--text)
-  grid-area header
+  left 0
   padding 0 env(safe-area-inset-right) 0 env(safe-area-inset-left)
-  position sticky
+  position fixed
+  right 0
   top 0
   transform translate3d(0, var(--shift-y), 0) // Custom property is set via JS.
   transition background var(--transition), border var(--transition), color var(--transition)
