--- a/src/stylus/clock/html.styl
+++ b/src/stylus/clock/html.styl
@@ -11,11 +11,8 @@ body
   webfont()
   background var(--background)
   display grid
-  grid-template-areas 'header'\
-                      'content'\
-                      'footer'
   grid-template-columns 1fr
-  grid-template-rows auto 1fr auto
+  grid-template-rows var(--header-height) 1fr var(--footer-height)
   min-height 100vh // fallback
   min-height calc(var(--viewport-unit, 1vh) * 100)
   transition background var(--transition), color var(--transition)
