ShiftyHeader reverted/coordinated with other projects usage

--- a/src/stylus/clock/header.styl
+++ b/src/stylus/clock/header.styl
@@ -7,7 +7,7 @@
   position fixed
   right 0
   top 0
-  transform translate3d(0, var(--shift-y), 0) // Custom property is set via JS.
+  transform translate3d(0, var(--sticky-shift), 0) // Custom property is set via JS.
   transition background var(--transition), border var(--transition), color var(--transition)
 
 .header__frame
