mini-fixes: --viewport-unit renamed to --vh; underscores replaced with hyphens in stylus filenames (no-op)

--- a/src/stylus/clock/color_picker.styl
+++ b/src/stylus/clock/color_picker.styl
@@ -32,7 +32,7 @@
   grid-gap px_to_rem(8)
   grid-template-columns repeat(4, 1fr)
   list-style none
-  margin-top px_to_rem(8)
+  margin px_to_rem(8) 0 0
   opacity 0
   padding px_to_rem(12)
   position absolute
