--- a/src/stylus/clock/html.styl
+++ b/src/stylus/clock/html.styl
@@ -14,7 +14,7 @@ body
   grid-template-columns 1fr
   grid-template-rows var(--header-height) 1fr var(--footer-height)
   min-height 100vh // fallback
-  min-height calc(var(--viewport-unit, 1vh) * 100)
+  min-height calc(var(--vh, 1vh) * 100)
   transition background var(--transition), color var(--transition)
 
 *
