replaces underscore with hyphen in stylus filename (no-op)

--- a/src/stylus/clock/index.styl
+++ b/src/stylus/clock/index.styl
@@ -1,7 +1,7 @@
 @import 'custom-properties'
 @import 'html'
 @import 'clocks'
-@import 'color_picker'
+@import 'color-picker'
 @import 'content'
 @import 'footer'
 @import 'header'
