--- a/src/stylus/clock/custom-properties.styl
+++ b/src/stylus/clock/custom-properties.styl
@@ -1,16 +1,16 @@
 :root
-  --button-width px_to_rem(44)
-  --footer-height px_to_rem(48)
-  --header-height px_to_rem(48)
-  --site-header px_to_rem(16)
+  --button-width rem(44)
+  --footer-height rem(48)
+  --header-height rem(48)
+  --site-header rem(16)
   --transition .3s ease-out
-  --fineprint px_to_em(12)
+  --fineprint em(12)
 
   @media Breakpoint.MEDIUM
-    --fineprint px_to_em(14)
-    --footer-height px_to_rem(60)
-    --header-height px_to_rem(60)
-    --site-header px_to_rem(20)
+    --fineprint em(14)
+    --footer-height rem(60)
+    --header-height rem(60)
+    --site-header rem(20)
 
   // Default light theme.
   --background #f7f7f7
