--- a/src/stylus/config/constants.styl
+++ b/src/stylus/config/constants.styl
@@ -4,17 +4,17 @@
 DARK_GREY = #222
 
 // @type String
-MAX_WIDTH = px_to_rem(512)
+MAX_WIDTH = rem(512)
 
 // @const String
-MENU_ARROW = px_to_rem(16)
+MENU_ARROW = rem(16)
 
 // @const String
-MENU_ITEM_SIZE = px_to_rem(32)
+MENU_ITEM_SIZE = rem(32)
 
 // @type Hash
 Breakpoint = {
-  MEDIUM: 'screen and (min-width: %s)' % px_to_rem(640)
+  MEDIUM: 'screen and (min-width: %s)' % rem(640)
 }
 
 // @type Hash
