--- a/src/stylus/clock/footer.styl
+++ b/src/stylus/clock/footer.styl
@@ -19,7 +19,7 @@
   transition color var(--transition)
 
 .copyright__years
-  margin-right px_to_em(8)
+  margin-right em(8)
 
 .copyright__owner
   link(var(--link), var(--link), var(--link-active), var(--link-active))
