--- a/src/stylus/clock/color-picker.styl
+++ b/src/stylus/clock/color-picker.styl
@@ -10,8 +10,8 @@
   display flex
   height var(--header-height)
   justify-content center
-  transition color var(--transition), transform var(--transition)
-  width var(--button-width)
+  transition color TRANSITION, transform TRANSITION
+  width BUTTON_WIDTH
 
 .color-picker__toggle:focus
 [no-touch] .color-picker__toggle:hover
@@ -38,7 +38,7 @@
   position absolute
   right rem(-2)
   transform 'translateY(-%s)' % rem(12)
-  transition opacity var(--transition), transform var(--transition), visibility var(--transition)
+  transition opacity TRANSITION, transform TRANSITION, visibility TRANSITION
   visibility hidden
   z-index -1
 
@@ -123,7 +123,7 @@ for name, value in ColorPalette
     border-left '2px solid %s' % value.hands
 
 [no-touch] .color-picker__swatch
-  transition transform var(--transition)
+  transition transform TRANSITION
 
 .color-picker__label:focus .color-picker__option:not(:checked) + .color-picker__swatch
 [no-touch] .color-picker__label:hover .color-picker__option:not(:checked) + .color-picker__swatch
