--- a/src/stylus/clock/header.styl
+++ b/src/stylus/clock/header.styl
@@ -8,7 +8,7 @@
   right 0
   top 0
   transform translate3d(0, var(--sticky-shift), 0) // Custom property is set via JS.
-  transition background var(--transition), border var(--transition), color var(--transition)
+  transition background TRANSITION, border TRANSITION, color TRANSITION
 
 .header__frame
   align-items center
