--- a/src/stylus/clock/html.styl
+++ b/src/stylus/clock/html.styl
@@ -10,7 +10,7 @@ body
 body
   webfont()
   background var(--background)
-  transition background var(--transition), color var(--transition)
+  transition background TRANSITION, color TRANSITION
 
 *
   box-sizing border-box
