--- a/src/stylus/config/constants.styl
+++ b/src/stylus/config/constants.styl
@@ -1,6 +1,9 @@
 @import 'functions';
 
 // @type String
+BUTTON_WIDTH = rem(44)
+
+// @type String
 DARK_GREY = #222
 
 // @type String
@@ -11,6 +14,9 @@ MENU_ARROW = rem(16)
 
 // @const String
 MENU_ITEM_SIZE = rem(32)
+
+// @const String
+TRANSITION = .3s ease-out
 
 // @type Hash
 Breakpoint = {
