--- a/src/stylus/clock/footer.styl
+++ b/src/stylus/clock/footer.styl
@@ -16,7 +16,7 @@
 
 .copyright__years
 .copyright__owner
-  transition color var(--transition)
+  transition color TRANSITION
 
 .copyright__years
   margin-right em(8)
@@ -25,4 +25,4 @@
   link(var(--link), var(--link), var(--link-active), var(--link-active))
 
 [no-touch] .copyright__owner:hover
-  transition color var(--transition)
+  transition color TRANSITION
