--- a/src/stylus/clock/no-js.styl
+++ b/src/stylus/clock/no-js.styl
@@ -3,7 +3,7 @@
 
 [no-js] .content a
   color var(--text)
-  transition opacity var(--transition)
+  transition opacity TRANSITION
   text-decoration underline
 
   &:hover
