--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -24,11 +24,18 @@ html(lang="en")
       main.content
         noscript Please <a href="https://www.enable-javascript.com/" title="How to enable JavaScript in your browser">enable JavaScript</a> to view this app.
       footer.footer
-        p.copyright
-          span.copyright__years © 2018–#{currentYear}
-          a.copyright__owner(
+        p.footer__blurb.footer__blurb--copyright
+          span.footer__years © 2018–#{currentYear}
+          a.footer__link(
             href="https://gauslin.com",
-            title="Ben Gauslin’s Website",
+            title="Visit Ben Gauslin’s Website",
             target="_blank",
             rel="noopener",
           ) Ben Gauslin
+        p.footer__blurb.footer__blurb--repo
+          a.footer__link(
+            href="https://github.com/bgauslin/clock",
+            title="View source code on GitHub",
+            target="_blank",
+            rel="noopener",
+          ) GitHub
