--- a/src/stylus/clock/color-picker.styl
+++ b/src/stylus/clock/color-picker.styl
@@ -67,9 +67,7 @@
 
 .color-picker__label
   display block
-  height MENU_ITEM_SIZE
   position relative
-  width MENU_ITEM_SIZE
 
 .color-picker__label:focus
   outline 0
@@ -87,23 +85,43 @@
 .color-picker__swatch
   align-items center
   background var(--face)
-  border 2px solid white
   border-radius 50%
   color transparent
   display inline-flex
   height MENU_ITEM_SIZE
   justify-content center
+  margin 2px
   position relative
   width MENU_ITEM_SIZE
   z-index -1
 
-.color-picker__swatch[option=white]
-  border-color #eee
+.color-picker__marker
+.color-picker__marker::after
+  border-radius 50%
+  height 100%
+  left 0
+  position absolute
+  top 0
+  width 100%
+  
+.color-picker__marker
+  background var(--face)
+  visibility hidden
+  z-index -3
 
-// TODO: Refactor/update CSS/JS to apply color-blended borders without Stylus.
-// border-color mix(black, face_rgb, 30%)
-.color-picker__option:checked + .color-picker__swatch
-  border-color DARK_GREY
+.color-picker__marker::after
+  background black
+  content ''
+  opacity .2
+  z-index -2
+
+// Always show  marker for white. Otherwise, the swatch color matches the
+// menu background and is effectively invisible.
+.color-picker__marker[color=white]
+  visibility visible
+
+.color-picker__option:checked ~ .color-picker__marker
+  visibility visible
 
 .color-picker__option:checked + .color-picker__swatch::after
   border-bottom 2px solid var(--hands)
@@ -111,15 +129,18 @@
   content ''
   display inline-block
   height rem(7)
-  left rem(6)
+  left rem(8)
   position absolute
-  top rem(7)
+  top rem(8)
   transform rotate(-45deg)
   width rem(14)
 
 [no-touch] .color-picker__swatch
+[no-touch] .color-picker__marker
   transition transform TRANSITION
 
 .color-picker__label:focus .color-picker__option:not(:checked) + .color-picker__swatch
+.color-picker__label:focus .color-picker__option:not(:checked) ~ .color-picker__marker
 [no-touch] .color-picker__label:hover .color-picker__option:not(:checked) + .color-picker__swatch
+[no-touch] .color-picker__label:hover .color-picker__option:not(:checked) ~ .color-picker__marker
   transform scale(1.2)
