--- a/src/stylus/clock/custom-properties.styl
+++ b/src/stylus/clock/custom-properties.styl
@@ -16,6 +16,8 @@
   --header-background rgba(white, .97)
   --link DARK_GREY
   --link-active rgba(DARK_GREY, .7)
+  --menu-background white
+  --menu-shadow 0 0 6px rgba(black, .2), 0 0 6px rgba(black, .3)
   --text DARK_GREY
 
   // Dark theme per user settings.
@@ -25,4 +27,6 @@
     --header-background rgba(DARK_GREY, .95)
     --link white
     --link-active rgba(white, .7)
+    --menu-background DARK_GREY
+    --menu-shadow  0 0 1px white
     --text white
