better color-picker menu shadows

--- a/src/stylus/clock/custom-properties.styl
+++ b/src/stylus/clock/custom-properties.styl
@@ -17,7 +17,7 @@
   --link DARK_GREY
   --link-active rgba(DARK_GREY, .7)
   --menu-background white
-  --menu-shadow 0 0 6px rgba(black, .2), 0 0 6px rgba(black, .3)
+  --menu-shadow elevation(2)
   --text DARK_GREY
 
   // Dark theme per user settings.
@@ -28,5 +28,5 @@
     --link white
     --link-active rgba(white, .7)
     --menu-background DARK_GREY
-    --menu-shadow  0 0 1px white
+    --menu-shadow 0 0 0 1px #555
     --text white
