--- a/src/stylus/clock/footer.styl
+++ b/src/stylus/clock/footer.styl
@@ -8,7 +8,7 @@
   justify-content center
   opacity .7
   padding 0 0 env(safe-area-inset-bottom)
-  transition color TRANSITION
+  transition color transition
 
 .footer__years
   margin-right em(8)
@@ -17,7 +17,7 @@
   link(var(--link), var(--link), var(--link-active), var(--link-active))
 
 [no-touch] .footer__link:hover
-  transition color TRANSITION
+  transition color transition
 
 .footer__blurb--repo::before
   content '·'
