--- a/src/stylus/clock/html.styl
+++ b/src/stylus/clock/html.styl
@@ -1,4 +1,4 @@
-all_webfonts()
+all-webfonts()
 
 html
 body
@@ -10,7 +10,7 @@ body
 body
   webfont()
   background var(--background)
-  transition background TRANSITION, color TRANSITION
+  transition background transition, color transition
 
 *
   box-sizing border-box
