--- a/src/stylus/config/constants.styl
+++ b/src/stylus/config/constants.styl
@@ -1,24 +1,14 @@
 @import 'functions';
 
-// @type String
-BUTTON_WIDTH = rem(44)
+grey-dark = #222
 
-// @type String
-DARK_GREY = #222
+button-width = rem(44)
+max-width = rem(512)
+menu-arrow = rem(16)
+menu-item-size = rem(32)
 
-// @type String
-MAX_WIDTH = rem(512)
+transition = .3s ease-out
 
-// @const String
-MENU_ARROW = rem(16)
-
-// @const String
-MENU_ITEM_SIZE = rem(32)
-
-// @const String
-TRANSITION = .3s ease-out
-
-// @type Hash
-Breakpoint = {
-  MEDIUM: 'screen and (min-width: %s)' % rem(640)
+breakpoint = {
+  medium: 'screen and (min-width: %s)' % rem(640)
 }
