flattens stylus folder (no-op)

--- a/src/stylus/index.styl
+++ b/src/stylus/index.styl
@@ -1,6 +1,9 @@
-@import 'custom-properties'
-@import 'html'
+@import '_functions'
+@import '_constants'
+@import '_mixins'
 
+@import 'vars'
+@import 'html'
 @import 'app'
 @import 'clocks'
 @import 'color-picker'
