--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -28,15 +28,11 @@ html(lang="en")
         p.footer__blurb.footer__blurb--copyright
           span.footer__years © 2018–#{currentYear}
           a.footer__link(
-            href="https://gauslin.com",
-            title="Visit Ben Gauslin’s Website",
-            target="_blank",
-            rel="noopener",
+            href="https://gauslin.com"
+            title="Visit Ben Gauslin’s Website"
           ) Ben Gauslin
         p.footer__blurb.footer__blurb--repo
           a.footer__link(
-            href="https://github.com/bgauslin/clock",
-            title="View source code on GitHub",
-            target="_blank",
-            rel="noopener",
+            href="https://github.com/bgauslin/clock"
+            title="View source code on GitHub"
           ) GitHub
