color picker styles moved to custom element

--- a/src/stylus/index.styl
+++ b/src/stylus/index.styl
@@ -6,8 +6,9 @@
 @import 'html'
 @import 'app'
 @import 'clocks'
-@import 'color-picker'
 @import 'content'
 @import 'footer'
 @import 'header'
 @import 'no-js'
+
+@import '../js/custom_elements/color_picker/color_picker'
