--- a/src/stylus/index.styl
+++ b/src/stylus/index.styl
@@ -5,10 +5,11 @@
 @import 'vars'
 @import 'html'
 @import 'app'
-@import 'clocks'
 @import 'content'
 @import 'footer'
 @import 'header'
 @import 'no-js'
 
+@import '../js/custom_elements/analog_clock/analog_clock'
+@import '../js/custom_elements/analog_clock/clocks'
 @import '../js/custom_elements/color_picker/color_picker'
