--- a/src/stylus/index.styl
+++ b/src/stylus/index.styl
@@ -5,10 +5,9 @@
 @import 'vars'
 @import 'html'
 @import 'app'
-@import 'content'
-@import 'footer'
 @import 'header'
-@import 'no-js'
+@import 'main'
+@import 'footer'
 
 @import '../js/custom_elements/analog_clock/analog_clock'
 @import '../js/custom_elements/analog_clock/clocks'
