--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -24,15 +24,13 @@ html(lang="en")
           color-picker.color-picker
       main
         noscript Please <a href="https://www.enable-javascript.com/" title="How to enable JavaScript in your browser">enable JavaScript</a> to view this app.
-      footer.footer
-        p.footer__blurb.footer__blurb--copyright
-          span.footer__years © 2018–#{currentYear}
-          a.footer__link(
-            href="https://gauslin.com"
-            title="Visit Ben Gauslin’s Website"
-          ) Ben Gauslin
-        p.footer__blurb.footer__blurb--repo
-          a.footer__link(
-            href="https://github.com/bgauslin/clock"
-            title="View source code on GitHub"
-          ) GitHub
+      footer
+        span © 2018–#{currentYear}
+        a(
+          href="https://gauslin.com"
+          title="Visit Ben Gauslin’s Website"
+        ) Ben Gauslin
+        a(
+          href="https://github.com/bgauslin/clock"
+          title="View source code on GitHub"
+        ) GitHub
