--- a/src/stylus/footer.styl
+++ b/src/stylus/footer.styl
@@ -1,4 +1,4 @@
-.footer
+footer
   align-items center
   color var(--text)
   display flex
@@ -10,17 +10,17 @@
   padding 0 0 env(safe-area-inset-bottom)
   transition color transition
 
-.footer__years
-  margin-right em(8)
+  span
+    margin-right em(8)
 
-.footer__link
-  link(var(--link), var(--link), var(--link-active), var(--link-active))
+  a
+    link(var(--link), var(--link), var(--link-active), var(--link-active))
 
-[no-touch] .footer__link:hover
-  transition color transition
+    [no-touch] &:hover
+      transition color transition
 
-.footer__blurb--repo::before
-  content '·'
-  display inline-block
-  text-align center
-  width 1rem
+    &:not(:first-of-type)::before
+      content '·'
+      display inline-block
+      text-align center
+      width 1rem
