--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -17,10 +17,10 @@ html(lang="en")
     link(rel="preload" href="https://assets.gauslin.com/fonts/AvenirNext-Variable.woff2" as="font" type="font/woff2" crossorigin="crossorigin")
   body(no-touch no-js)
     clock-app.app(target="main")
-      app-header.header
-        div.header__frame
-          digital-clock(target=".site-name")
-            h1.site-name= title
+      shifty-header
+        header
+          digital-clock(target="h1")
+            h1= title
           color-picker.color-picker
       main
         noscript Please <a href="https://www.enable-javascript.com/" title="How to enable JavaScript in your browser">enable JavaScript</a> to view this app.
