--- a/src/stylus/index.styl
+++ b/src/stylus/index.styl
@@ -12,3 +12,4 @@
 @import '../js/custom_elements/analog_clock/analog_clock'
 @import '../js/custom_elements/analog_clock/clocks'
 @import '../js/custom_elements/color_picker/color_picker'
+@import '../js/custom_elements/shifty_header/shifty_header'
