--- a/src/stylus/index.styl
+++ b/src/stylus/index.styl
@@ -4,7 +4,7 @@
 
 @import 'vars'
 @import 'html'
-@import 'app'
+@import 'body'
 @import 'header'
 @import 'main'
 @import 'footer'
@@ -13,3 +13,4 @@
 @import '../js/custom_elements/analog_clock/clocks'
 @import '../js/custom_elements/color_picker/color_picker'
 @import '../js/custom_elements/shifty_header/shifty_header'
+@import '../js/custom_elements/tools/tools'
