--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -4,10 +4,10 @@ main
   justify-self center
   padding 0 env(safe-area-inset-right) 0 env(safe-area-inset-left)
 
-  [no-js] &
-    color var(--text)
+[no-js] main
+  color var(--text)
 
-  [no-js] & a
+  a
     color var(--text)
     text-decoration underline
     transition opacity transition
