--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -15,22 +15,22 @@ html(lang="en")
     link(rel="icon" type="image/svg+xml" href="/favicon.svg")
     link(rel="manifest" href="/pwa/manifest.json")
     link(rel="preload" href="https://assets.gauslin.com/fonts/AvenirNext-Variable.woff2" as="font" type="font/woff2" crossorigin="crossorigin")
-  body(no-touch no-js)
-    clock-app.app(target="main")
-      shifty-header
-        header
-          digital-clock(target="h1")
-            h1= title
-          color-picker.color-picker
-      main
-        noscript Please <a href="https://www.enable-javascript.com/" title="How to enable JavaScript in your browser">enable JavaScript</a> to view this app.
-      footer
-        span © 2018–#{currentYear}
-        a(
-          href="https://gauslin.com"
-          title="Visit Ben Gauslin’s Website"
-        ) Ben Gauslin
-        a(
-          href="https://github.com/bgauslin/clock"
-          title="View source code on GitHub"
-        ) GitHub
+  body(no-js no-touch)
+    shifty-header
+      header
+        digital-clock(target="h1")
+          h1= title
+        color-picker.color-picker
+    main
+      noscript Please <a href="https://www.enable-javascript.com/" title="How to enable JavaScript in your browser">enable JavaScript</a> to view this app.
+    footer
+      span © 2018–#{currentYear}
+      a(
+        href="https://gauslin.com"
+        title="Visit Ben Gauslin’s Website"
+      ) Ben Gauslin
+      a(
+        href="https://github.com/bgauslin/clock"
+        title="View source code on GitHub"
+      ) GitHub
+    x-tools(target="main")
