simplifies color-picker button html/css

--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -20,7 +20,7 @@ html(lang="en")
       header
         digital-clock(target="h1")
           h1= title
-        color-picker.color-picker
+        color-picker
     main
       noscript Please <a href="https://www.enable-javascript.com/" title="How to enable JavaScript in your browser">enable JavaScript</a> to view this app.
     footer
