--- a/src/stylus/index.styl
+++ b/src/stylus/index.styl
@@ -7,9 +7,9 @@
 @import 'body'
 @import 'header'
 @import 'main'
+@import 'clocks'
 @import 'footer'
 
 @import '../js/custom_elements/analog_clock/analog_clock'
-@import '../js/custom_elements/analog_clock/clocks'
 @import '../js/custom_elements/color_picker/color_picker'
 @import '../js/custom_elements/tools/tools'
