--- a/src/stylus/header.styl
+++ b/src/stylus/header.styl
@@ -2,12 +2,9 @@ header
   background var(--header-background)
   border-bottom 1px solid var(--border)
   color var(--text)
-  left 0
   padding 0 env(safe-area-inset-right) 0 env(safe-area-inset-left)
-  position fixed
-  right 0
+  position sticky
   top 0
-  transform translate3d(0, var(--sticky-shift), 0) // Custom property is set via JS.
   transition background transition, border transition, color transition
 
   & > div
