--- a/src/stylus/clocks.styl
+++ b/src/stylus/clocks.styl
@@ -1,3 +1,7 @@
+.clocks
+  align-items center
+  display flex
+
 // Each clock sits within a 10 x 10 grid, but we want the hour and minute hands
 // to touch at 6 PM and make 3 continuous vertical lines, so the grid_count for
 // each clock is on an 8-cell interval. The total number of grid cells is the
@@ -22,7 +26,7 @@ grid_count = 3 // i.e. 3 x 3
 start = interval / 2
 total = grid_count * grid_count
 
-.clocks
+[id=clocks]
   background var(--face)
   border 1px solid var(--border)
   display grid
